# earned-media-eval-lab

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/web/: package-lock.json  package.json
apps/web/app/: components.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/evals/: page.tsx
apps/web/app/release/: page.tsx
data/fixtures/: articles.jsonl  editorial-labels.jsonl  releases.jsonl
evals/: run_evals.py
evals/reports/: latest.json  latest.md
scripts/: generate_fixtures.py
skills/candidate-article-review/: SKILL.md
skills/eval-regression-analysis/: SKILL.md
skills/release-intake/: SKILL.md
skills/threshold-calibration/: SKILL.md
specs/: evaluation-plan.md  product-brief.md  scenarios.feature  scoring-policy.yaml  threshold-policy.yaml
src/earned_media/: config.py  fixtures.py  models.py  pipeline.py  text.py
src/earned_media/agent/: reviewer.py
src/earned_media/api/: main.py
src/earned_media/cost/: model.py
src/earned_media/policy/: routing.py
src/earned_media/scoring/: components.py
tests/: test_api.py  test_pipeline_and_policy.py  test_scoring.py
